--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,17 +4,20 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/logo"
+
         android:supportsRtl="true"
         android:theme="@style/Theme.Echoscholarandroid"
         tools:targetApi="31">
-
+<!--android:roundIcon="@mipmap/logo"-->
         <activity
             android:name=".ui.splash.SplashActivity"
             android:exported="true">
@@ -27,6 +30,7 @@
         <activity
             android:name=".ui.dashboard.DashboardActivity"
             android:exported="false" />
+        <activity android:name=".ui.dashboard.NewSessionActivity" />
         <activity
             android:name=".ui.auth.MainActivity"
             android:exported="true"
